--- a/my-react-app/src/Encabezado.css
+++ b/my-react-app/src/Encabezado.css
@@ -48,6 +48,22 @@ h1{
     color: white;
 
 }
+
+.menuDiv button {
+    background: none;
+    border: none;
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+    padding: 20px;
+    text-decoration: none;
+}
+
+.menuDiv button:hover {
+    background-color: black;
+    padding: 20px;
+}
 .menuDiv ul li a{
     text-decoration: none;
     color: white;
