--- a/my-react-app/src/Usuarios.css
+++ b/my-react-app/src/Usuarios.css
@@ -76,3 +76,17 @@ h2 {
 .btn-eliminar:hover {
   background-color: #c62828;
 }
+
+.btn-editar {
+  padding: 6px 12px;
+  background-color: #68e657;
+  color: white;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.btn-editar:hover {
+  background-color: #68e657;
+}
